--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src/app.ts"
+    "up": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/servidor.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.9.1",
-    "axios": "^0.25.0",
+    "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^3.9.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/typescript": "^2.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
