--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2017",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "commonjs",                                /* Specify what module code is generated. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
-    "strict": false,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "sourceMap": true,                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "outDir": "dist",                                /* Specify what module code is generated. */
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    "lib": ["esnext"],                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
+    "esModuleInterop": true,            /* Ensure that casing is correct in imports. */
   }
 }
